Fix: contianer_name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "1.0.0"
 services:
   train_container:
-    container_name: wav2vec2-train
+    container_name: TransformerTransducer-train
     build:
       context: .
       dockerfile: Dockerfile
