--- a/Dockerfile.serve
+++ b/Dockerfile.serve
@@ -12,12 +12,12 @@ RUN apt-get update && \
     apt-get install -y ffmpeg wget net-tools build-essential git curl vim nmon tmux lsof libssl-dev && \
     apt-get install -y python3.10 python3.10-dev python3.10-venv python3-pip
 
+# 파이썬 관련 유틸
 RUN pip install torch==2.2.0+cu121 torchaudio==2.2.0+cu121 --index-url https://download.pytorch.org/whl/cu121
-    # 파이썬 관련 유틸
 RUN pip install -U pip wheel setuptools && \
     pip install transformers==4.42.4 accelerate==0.32.1 tritonclient[all] && \
     pip install k2==1.24.4.dev20240210+cuda12.1.torch2.2.0 -f https://k2-fsa.github.io/k2/cuda.html && \
-    pip install scipy sentencepiece&& \
+    pip install scipy sentencepiece gradio==4.39.0 gradio_client==1.1.1 && \
     pip install soundfile librosa jiwer&& \
     pip install setproctitle glances[gpu] && \
     pip install ruff natsort cmake
